--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
   "devDependencies": {
     "body-parser": "^1.16.1",
     "express": "^4.14.1",
+    "express-handlebars": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
     "handlebars": "^4.0.6",
     "live-reload": "^1.1.0",
     "sequelize": "^3.30.2"
+  },
+  "dependencies": {
+    "handlebars": "^4.0.6"
   }
 }
