--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "sequelize": "^3.30.2"
   },
   "dependencies": {
-    "handlebars": "^4.0.6"
+    "body-parser": "^1.16.1",
+    "handlebars": "^4.0.6",
+    "pg": "^6.1.2",
+    "pg-hstore": "^2.3.2"
   }
 }
