--- a/config/config.json
+++ b/config/config.json
@@ -19,5 +19,8 @@
     "database": "architekt",
     "host": "127.0.0.1",
     "dialect": "postgres"
-  }
+  },
+  "SESSION_SECRET": "keyboard_cat",
+  "USERNAME": "nick",
+  "PASSWORD": "password"
 }
