--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
   },
   "dependencies": {
     "body-parser": "^1.16.1",
+    "express-session": "^1.15.1",
     "handlebars": "^4.0.6",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2"
   }
