--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "body-parser": "^1.16.1",
     "express-session": "^1.15.1",
     "handlebars": "^4.0.6",
+    "method-override": "^2.3.7",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pg": "^6.1.2",
