--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "dependencies": {
     "body-parser": "^1.16.1",
+    "connect-redis": "^3.2.0",
+    "cookie-parser": "^1.4.3",
     "express-session": "^1.15.1",
     "handlebars": "^4.0.6",
     "method-override": "^2.3.7",
