--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sequelize": "^3.30.2"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.1",
     "connect-redis": "^3.2.0",
     "cookie-parser": "^1.4.3",
